# Automated-Schools-Outreach-System

./: .gitignore  NCES_data_cleansing.ipynb  environment.yml  pyproject.toml
automated_schools_outreach_system/: check_scraped.py  config.py  db_manager.py  scraping_prep.py  store_emails.py
automated_schools_outreach_system/school_website/: check_scraped.py  debug.py  store_emails.py
automated_schools_outreach_system/search_engine/: db_manager.py  scraping_prep.py
crawler_queries/schemas/: search_engine_csv_import.sql
crawlers/scrapy_crawler/: middlewares.py  settings.py
cscrapers/scrapy_scraper/: settings.py
data/website_no_website_schools/: schools_with_websites.csv  search_engine_results.csv  search_engine_results2.csv
data_cleaning_analysis/EDA/: nces_data_cleansing.ipynb
db_queries/: search_engine_results.sql  search_engine_tables.sql
db_queries/migrations/: 01_se_result1_creation.sql  02_se_result1_column_update.sql  03_se_with_websites.sql  04_se_combined_table_creation.sql  05_final_scraped_website_column_creation.sql  06_final_scraped_website_remove_duplicate.sql  07_scraped_school_emails.sql  08_scraped_school_emails_delete_websites.sql  08_scraped_school_emails_updates.sql  09_scraped_school_emails_update_websites.sql  12_website_database_creation.sql  (+4 more)
notebooks/: nces_data_cleansing.ipynb  nces_data_exploration.ipynb
scripts/: load_full_school_information_csv.sh  load_search_engine_prep_csv.sh  load_search_engine_results2_csv.sh  load_search_engine_results_csv.sh  load_search_engine_results_for_scrape.sh
search_engine_scraper/: scrapy.cfg
(+14 files in other folders)
